# morphMan

./: .flake8  .gitignore  .readthedocs.yaml  .travis.yml  CONTRIBUTING.md  LICENSE  README.md  TODO  appveyor.yml  environment.yml  linting.sh  paper.bib  paper.md  pyproject.toml  setup.py  workaround_vmtk.sh
.circleci/: config.yml
automatedGeometricManipulation/: check_alpha_beta_norm.py  clipvoronoidiagram.py  combine_clmodel.py  common.py  compute_area.py  compute_quantities.py  interpolate_surface.py  knot_addition_removal.m  manipulate_line.py  moveandmanipulatetools.py  old_mani_line.py  paralleltransportvoronoidiagram.py  patchandinterpolatecenterlines.py  plot_compare.py  quantities_short.py  smooth_voronoi.py  vmtkpointselector.py
automatedLandmarking/: README.md  SMA.py  backup_bog.py  centerline.txt  clipvoronoidiagram.py  common_backup.py  create_plots.py  end_ids.txt  initialize_cases.py  landmark_bogunovic.py  landmark_merge.py  landmark_piccinelli.py  paralleltransportvoronoidiagram.py  patchandinterpolatecenterlines.py  tmp.particles  visualize_landmarks.py
conda-build/: conda_build_config.yaml  meta.yaml
demo/: demo_manipulate_area_inflation.py  demo_manipulate_area_stenosis.py  demo_manipulate_area_variation.py  demo_manipulate_bend.py  demo_manipulate_bifurcation.py  demo_manipulate_branch.py  demo_manipulate_curvature.py  demo_manipulate_surface.py  get_test_data.py
doc/: Makefile
docs/: make.bat  requirements.txt
morphman/: __init__.py  argparse_common.py  automated_landmarking.py  common.py  estimate_alpha_and_beta.py  manipulate_area.py  manipulate_bend.py  manipulate_bifurcation.py  (+3 more)
(+174 files in other folders)
