[build-system] # Require setuptool version due to https://github.com/pypa/setuptools/issues/2938
requires = ["setuptools>=61.0.0", "wheel"]

[project]
name = "morphman"
version = "1.3.0"
description = "morphMan (morphological manipulation) is a collection of tools for automated and objective manipulation and reconstruction of morphological features of patient-specific vascular geometries."
authors = [{ name = "Aslak W. Bergersen, Henrik A. Kjeldsberg", email = "henrik.kjeldsberg@live.no" }]
requires-python = ">=3.6"
license = { file = "LICENSE" }
readme = "README.md"
dependencies = [
    'scipy'
]

[project.urls]
Homepage = "https://github.com/KVSlab/morphMan.git"
Documentation = "https://morphman.readthedocs.io/"
Repository = "https://github.com/KVSlab/morphMan.git"
Issues = "https://github.com/KVSlab/morphMan/issues"

[project.scripts]
morphman-area = "morphman.manipulate_area:main_area"
morphman-bend = "morphman.manipulate_bend:main_bend"
morphman-bifurcation = "morphman.manipulate_bifurcation:main_bifurcation"
morphman-curvature = "morphman.manipulate_curvature:main_curvature"
morphman-branch = "morphman.manipulate_branch:main_branch"
morphman-surface = "morphman.manipulate_surface:main_surface"

[project.optional-dependencies]
test = [
    "isort",
    "black",
    "flake8",
    "pytest",
]

[tool.pytest.ini_options]
testpaths = [
    "tests"
]

[tool.mypy]
ignore_missing_imports = true
# Folders to exclude
exclude = [
    "docs/",
    "build/",
]
# Folder to check with mypy
files = [
    "src",
    "tests"
]